[package]
name = "tokay"
version = "0.6.8-1"  # sticks to Tokay
edition = "2024"
description = "Tokay programming language (WASM-port)"
authors = ["Jan Max Meyer <jmm@phorward.de>"]
homepage = "https://tokay.dev/"
repository = "https://github.com/tokay-lang/tokay-wasm"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
tokay = { version = "0.6.8", path="../tokay-main", default-features = false, features = [
    "static_expression_evaluation",
] }
log = "0.4"
