[package]
name = "tokay-wasm"
version = "0.6.8"  # synchronous to Tokay release
edition = "2024"
description = "Tokay programming language (WASM-bindings)"
authors = ["Jan Max Meyer <jmm@phorward.de>"]
homepage = "https://tokay.dev/"
repository = "https://github.com/tokay-lang/tokay-wasm"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
tokay = { version = "0.6.8", default-features = false, features = [
    "static_expression_evaluation",
] }
log = "0.4"
