[package]
name = "tokay-wasm"
version = "0.6.9"  # synchronous to Tokay release
edition = "2024"
description = "Tokay programming language (WASM-bindings)"
authors = ["Jan Max Meyer <jmm@phorward.de>"]
homepage = "https://tokay.dev/"
repository = "https://github.com/tokay-lang/tokay-wasm"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
log = "0.4"
tokay = { path = "../tokay-main", version = "0.6.9", default-features = false, features = ["static_expression_evaluation"] }
# tokay-macros = "0.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
